<resources>
    <string name="app_name">Karangan Cemerlang SPM</string>
    <string name="administrator">Administrator</string>
    <string name="email">Email</string>
    <string name="password">Kata Laluan</string>
    <string name="title">Tajuk</string>
    <string name="description">Deskripsi</string>
    <string name="add">Tambah</string>
    <string name="update">Kemas Kini</string>
    <string name="versi">versi</string>
    <string name="edit">Edit</string>
    <string name="mencari_karangan">Carian Karangan</string>
    <string name="like">Suka</string>
    <string name="action_about">Tentang Aplikasi</string>
    <string name="data_is_not_found">Maklumat Tidak Tiada</string>
    <string name="tips_karangan">Tips</string>
    <string name="tips_karangan_explain">
        <![CDATA[
        <h2><b>Tips Buat Karangan Menggunakan AMBaCoKUP</b></h2>
        </br>
        </br>
        <p><b>Pengenalan:</b> Kalau ketandusan idea, tips ini inshaAllah dapat membantu anda semua. Terima kasih kepada guru saya di SMK Paya Kemunting dan SMK Seri Mahawangsa diatas ilmu yang dicurahkan.</p>
        </br>
        <p><b>Cara-cara:</b></p>
        <p>1. Mendalami soalan terlebih dahulu. Apa soalan itu mahu. Soalan nak langkah, cara, peranan, punca, faktor, manfaat, faedah, usaha?</p>
        <p>2. Corakkan perjalanan karangan. Penggunaan AMBaCoKUP. Bagaimana permulaan, pertengahan, klimaks, pengakhiran karangan kamu.</p>
        <p>3. Senaraikan isi penting. Senang dikenal pasti berdasarkan soalan. Sebab itu kena mendalami soalan.</p>
        <p>4. Selamat Mengarang :)</p>
        </br>
        </br>
        </br>
        <h3><b>AMBaCoKUP</b></h3>
        </br>
        <p><i><b>Nota dari saya:</b> Nak buat karangan ni, kita kena bayangkan.. selepas nie apa.. then apa pulak.. nada suara kita dalam hati tu mainkan peranan jugak untuk menjana idea, ulang banyak kali nada itu, mcm kita bagi pidato tu. haa inshaAllah idea tu datang. contohnya, \"dasawarsa ini, pembangunan dalam negara kita merosot. media massa banyak memaparkan ...... " .</i></p>
        </br>
        <p><b>PENDAHULUAN KARANGAN</b></p>
        <p>Pendahuluan ni mcm pengenalan terhadap soalan. Contohnya, 'peranan ibu bapa terhadap pendidikan anak-anak'. Okay, 1st sekali, kita buat la pengenalan ibu bapa sekarang nie. 'sibuk dgn kerja' and so on. Then, kaitkan la pulak dgn anak-anak & pendidikan. Contohnya, berdasarkan peribahasa anak-anak ibarat kain putih, ibu bapalah yang mencorakkannya. Pastu, buat la persoalan, contohnya "apakah peranan ibu bapa terhadap pendidikan anak-anak?" Ayat penegasan yg last sekali ni penting, dapat menimbulkan persoalan, tertanya-tanya. Pendahuluan ni macam ngan flow.. kita mcm ngan ikut jerr.. </p>
        </br>
        <p><b>ISI KARANGAN untuk SETIAP PERENGGAN:</b></p>
        </br>
        <p><b>A</b> = Apa...  mean, apa yg tajuk tuu nakk.. kita akan tulis balik isi points yang kita dapat tu.</p>
        <p><b>M</b> = Mengapa...  mean, mengapa benda tu berlaku, selalunya ayat akan bermula, "hal ini kerana...."</p>
        <p><b>Ba</b> = Bagaimana...  mean, bagaimana nak bendung,.. selalu ayat yg sy guna "usaha yg boleh dilaksanakan...."</p>
        <p><b>Co</b> = Contoh..  mean, nak bagi contoh perkara yg berlaku pun boleh... "contonhya, membina masjid di kawasan perumahan.." ataupun "misalnya..."</p>
        <p><b>K</b> = Kesan...  mean, kesan yg akan berlaku terhadap contoh itu.. "impaknya, ramai org akan pergi ke masjid..." ataupun "kesannya...."</p>
        <p><b>U</b> = Ungkapan...  mean, ungkapan daripada kesan itu.. "ada peribahasa menyatakan bahawa...."</p>
        <p><b>P</b> = Penegasan...  mean, nak tegas balikk... selalunya salin balik ayat 1st kita buat perenggan... salin sebulat2 pun tkpa cuma tambah "Sesungguhnya...." ataupun "Jelaslah bahawa...."</p>
        <p>pastu perenggan kedua pun sama la .. hehe..</p>
        <p><i>Extra tips: nak bagi cantik sikit, perenggan 2 or 3, kita terbalikkan ayat untuk Apa. Contoh, ayat 1st: "Untuk berjasa kepada kedua ibu bapa kita ialah dengan menolong kedua ibu bapa." . ayat 2nd: "Menolong kedua ibu bapa kita adalah salah satu cara untuk berjasa kepada kedua ibup bapa kita". Nampak dak?</i></p>
        </br>
        <p><b>PENUTUP KARANGAN:</b></p>
        <p>Penutup ni pun sama jugak la dgn pendahuluan, cuma ubah2 kan dari ayat pendahuluan. pastu cuba kaitkan "Pelbagai pihak perlu memainkan peranan .... ". orang kata ayat harapan.... ayat nak up . haha. camtu la .</p>
        <p>kalau tak faham atau pertanyaan, boleh emailkan ke: <b><i>ticherhaz@gmail.com</i></b></P>
        <p><b><i>Selamat beramal dan semoga maju jaya! :)</i></b></p>
]]></string>
    <string name="feedback">Maklum Balas</string>
    <string name="about_title"> 
        <![CDATA[
        <h3>Karangan Cemerlang SPM</h3>
        <i>versi 5.13</i><br>
        hazman45.blogspot.com<br>
        Ticherhaz©2025

        <p><i>Ucapan ribuan terima kasih kepada semua yang memberi sokongan aplikasi saya ini. :) </i></p>

        <p>Kongsi dengan rakan-rakan yer :)</p>

        </br>
]]>
    </string>
    <string name="submit">Hantar</string>
    <string name="hantar_karangan">Hantar</string>
    <string name="muat_naik_file">Muat Naik Fail</string>
    <string name="forum">Forum</string>
    <string name="nama">Nama</string>
    <string name="sekolah">Sekolah</string>
    <string name="sign_in">Log Masuk</string>
    <string name="sign_up">Daftar</string>
    <string name="username">Nama Samaran</string>
    <string name="confirm_password">Mengesahkan Kata Laluan</string>
    <string name="email_or_username">Email atau Nama Samaran</string>
    <string name="merriweather">Merriweather</string>
    <string name="roboto">Roboto</string>
    <string name="default_font">Default</string>
    <string name="timenewroman">Times New Roman</string>
    <string name="arial">Arial</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="hantar">Hantar</string>
    <string name="jantina">Jantina</string>
    <string name="tarikh_lahir">Tarikh Lahir</string>
    <string name="negeri">Negeri</string>
    <string name="status">Status</string>
    <string name="_31">31</string>
    <string name="_12">12</string>
    <string name="_2019">2019</string>
    <string name="gembira">Gembira</string>
    <string name="biasa">Biasa</string>
    <string name="sedih">Sedih</string>
    <string name="tajuk">Tajuk</string>
    <string name="patuh_peraturan">Saya sudah baca dan setuju untuk mematuhi peraturan Forum Karangan Cemerlang SPM peraturan.</string>
    <string name="main_terms">Untuk meneruskan, anda mesti bersetuju dengan peraturan berikut:</string>
    <string name="old_password">Kata Laluan Lama</string>
    <string name="new_password">Kata Laluan Baru</string>
    <string name="new_password_confirm">Mengesahkan Kata Laluan Baru</string>
</resources>