<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:layout_margin="7dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text_email_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_or_username"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:text="@string/sign_in"
        android:textAllCaps="false" />

</LinearLayout>