<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    android:orientation="vertical"
    tools:context=".HantarKaranganActivity">

    <EditText
        android:id="@+id/edit_text_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/nama"
        android:padding="7dp" />

    <EditText
        android:id="@+id/edit_text_sekolah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="9dp"
        android:layout_marginRight="17dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/sekolah"
        android:padding="7dp" />

    <Button
        android:id="@+id/button_muat_naik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="31dp"
        android:background="@drawable/button_selector"
        android:padding="9dp"
        android:text="@string/muat_naik_file"
        android:textAllCaps="false" />
</LinearLayout>