<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    android:orientation="vertical"
    tools:context=".TopikBaruActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_hantar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/button_selector"
            android:text="@string/hantar"
            android:textAllCaps="false"
            android:textColor="@color/colorTextWhite" />

        <EditText
            android:id="@+id/edit_text_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deskripsi"
            android:textColor="?attr/colorText"
            android:textColorHint="?attr/colorText" />

        <EditText
            android:id="@+id/edit_text_tajuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tajuk"
            android:singleLine="true"
            android:textColor="?attr/colorText"
            android:textColorHint="?attr/colorText" />

    </LinearLayout>
</ScrollView>